<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:picker="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/archiviazione">
        <com.distesala.android_concorsi_gazzetta.preferences.GazzettePickerPreference
            android:key="num_gazzette"
            android:title="@string/limite_gazzette"
            android:defaultValue="30"
            android:summary="ereoto"
            picker:min_value="15"
            picker:max_value="60"
            picker:step="5">
        </com.distesala.android_concorsi_gazzetta.preferences.GazzettePickerPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/visualizzazione">
        <com.distesala.android_concorsi_gazzetta.preferences.GazzettePickerPreference
            android:key="scadenza_threshold"
            android:title="@string/soglia_scadenza"
            android:defaultValue="10"
            android:summary="Stai attento che scadono"
            picker:min_value="5"
            picker:max_value="15"
            picker:step="1">
        </com.distesala.android_concorsi_gazzetta.preferences.GazzettePickerPreference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/connettività">
        <CheckBoxPreference android:key="utilizzo_rete_dati"
                            android:summary="@string/summary_rete_dati"
                            android:title="@string/rete_dati_title"
                            android:defaultValue="false"/>

    </PreferenceCategory>


</PreferenceScreen>